Fourth Class - Before Coffee Break

--- a/index.html
+++ b/index.html
@@ -59,7 +59,97 @@
 
     </section>
 
-    <section class="content"></section>
+    <section class="block slider">
+        <div class="title-slider">
+            <h2 id="locations">Lugares Populares</h2>
+        </div>
+        <div class="carousel-container">
+            <nav class="link-slider">
+                <ul>
+                    <li><a href="#">Todos</a></li>
+                    <li><a href="#">Museus</a></li>
+                    <li><a href="#">Galerias</a></li>
+                    <li><a href="#">Pontos Turísticos</a></li>
+                    <li><a href="#">Esportes</a></li>
+                    <li><a href="#">Restaurantes</a></li>
+                </ul>
+            </nav>
+            <div class="carousel-gallery">
+                <!-- <div class="card">
+                    <div class="gallery-picture">
+                        <img src="assets/images/gallery/bondinho_pao_acucar.jpg" alt="Bondinho Pão de Açúcar" />
+                        <div class="gallery-ellipse">
+                            <svg width="24" height="24" viewBox="0 0 29 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M14.5 27L12.3975 25.0578C4.93 18.1864 0 13.6545 0 8.09264C0 3.56076 3.509 0 7.975 0C10.498 0 12.9195 1.19183 14.5 3.0752C16.0805 1.19183 18.502 0 21.025 0C25.491 0 29 3.56076 29 8.09264C29 13.6545 24.07 18.1864 16.6025 25.0725L14.5 27Z" fill="#333333A0"/>
+                            </svg>
+                        </div>
+                    </div>
+                    <h2>Bondinho Pão de Açúcar</h2>
+                    <div class="card-location">
+                        <svg width="24" height="24" viewBox="0 0 14 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M7 0C3.13 0 0 3.13 0 7C0 12.25 7 20 7 20C7 20 14 12.25 14 7C14 3.13 10.87 0 7 0ZM7 9.5C5.62 9.5 4.5 8.38 4.5 7C4.5 5.62 5.62 4.5 7 4.5C8.38 4.5 9.5 5.62 9.5 7C9.5 8.38 8.38 9.5 7 9.5Z" fill="#C7C7C8"/>
+                        </svg>
+                        <h3>Rio de Janeiro - RJ</h3>
+                    </div>
+                </div> -->
+                <!-- 
+
+                <div class="card">
+                    <div class="gallery-picture">
+                        <img src="assets/images/gallery/museu_do_amanha.jpg" alt="Bondinho Pão de Açúcar" />
+                        <div class="gallery-ellipse">
+                            <svg width="24" height="24" viewBox="0 0 29 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M14.5 27L12.3975 25.0578C4.93 18.1864 0 13.6545 0 8.09264C0 3.56076 3.509 0 7.975 0C10.498 0 12.9195 1.19183 14.5 3.0752C16.0805 1.19183 18.502 0 21.025 0C25.491 0 29 3.56076 29 8.09264C29 13.6545 24.07 18.1864 16.6025 25.0725L14.5 27Z" fill="#333333A0"/>
+                            </svg>
+                        </div>
+                    </div>
+                    <h2>Museu do Amanhã</h2>
+                    <div class="card-location">
+                        <svg width="24" height="24" viewBox="0 0 14 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M7 0C3.13 0 0 3.13 0 7C0 12.25 7 20 7 20C7 20 14 12.25 14 7C14 3.13 10.87 0 7 0ZM7 9.5C5.62 9.5 4.5 8.38 4.5 7C4.5 5.62 5.62 4.5 7 4.5C8.38 4.5 9.5 5.62 9.5 7C9.5 8.38 8.38 9.5 7 9.5Z" fill="#C7C7C8"/>
+                        </svg>
+                        <h3>Rio de Janeiro - RJ</h3>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="gallery-picture">
+                        <img src="assets/images/gallery/praia_copacabana.jpg" alt="Bondinho Pão de Açúcar" />
+                        <div class="gallery-ellipse">
+                            <svg width="24" height="24" viewBox="0 0 29 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M14.5 27L12.3975 25.0578C4.93 18.1864 0 13.6545 0 8.09264C0 3.56076 3.509 0 7.975 0C10.498 0 12.9195 1.19183 14.5 3.0752C16.0805 1.19183 18.502 0 21.025 0C25.491 0 29 3.56076 29 8.09264C29 13.6545 24.07 18.1864 16.6025 25.0725L14.5 27Z" fill="#333333A0"/>
+                            </svg>
+                        </div>
+                    </div>
+                    <h2>Praia de Copacabana</h2>
+                    <div class="card-location">
+                        <svg width="24" height="24" viewBox="0 0 14 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M7 0C3.13 0 0 3.13 0 7C0 12.25 7 20 7 20C7 20 14 12.25 14 7C14 3.13 10.87 0 7 0ZM7 9.5C5.62 9.5 4.5 8.38 4.5 7C4.5 5.62 5.62 4.5 7 4.5C8.38 4.5 9.5 5.62 9.5 7C9.5 8.38 8.38 9.5 7 9.5Z" fill="#C7C7C8"/>
+                        </svg>
+                        <h3>Rio de Janeiro - RJ</h3>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="gallery-picture">
+                        <img src="assets/images/gallery/corcovado.jpg" alt="Bondinho Pão de Açúcar" />
+                        <div class="gallery-ellipse">
+                            <svg width="24" height="24" viewBox="0 0 29 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M14.5 27L12.3975 25.0578C4.93 18.1864 0 13.6545 0 8.09264C0 3.56076 3.509 0 7.975 0C10.498 0 12.9195 1.19183 14.5 3.0752C16.0805 1.19183 18.502 0 21.025 0C25.491 0 29 3.56076 29 8.09264C29 13.6545 24.07 18.1864 16.6025 25.0725L14.5 27Z" fill="#333333A0"/>
+                            </svg>
+                        </div>
+                    </div>
+                    <h2>Corcovado</h2>
+                    <div class="card-location">
+                        <svg width="24" height="24" viewBox="0 0 14 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M7 0C3.13 0 0 3.13 0 7C0 12.25 7 20 7 20C7 20 14 12.25 14 7C14 3.13 10.87 0 7 0ZM7 9.5C5.62 9.5 4.5 8.38 4.5 7C4.5 5.62 5.62 4.5 7 4.5C8.38 4.5 9.5 5.62 9.5 7C9.5 8.38 8.38 9.5 7 9.5Z" fill="#C7C7C8"/>
+                        </svg>
+                        <h3>Rio de Janeiro - RJ</h3>
+                    </div>
+                </div> -->
+            </div>
+        </div>
+    </section>
 
     <footer class="footer-site">
      <div class="footer-links">
@@ -82,7 +172,7 @@
             </p>
          </div>
          <div class="link social-media">
-            <a href="">
+            <a href="https://www.instagram.com/hcodebrasil/">
                 <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M5.57863 21.9222C4.27028 21.8627 3.55954 21.645 3.08681 21.4606C2.46043 21.2167 2.01385 20.9264 1.54373 20.4569C1.07362 19.9875 0.782655 19.5409 0.540078 18.9145C0.355693 18.4418 0.137962 17.731 0.0784617 16.4227C0.0130769 15.0084 0 14.5841 0 11.001C0 7.4179 0.0143846 6.9942 0.0778078 5.57863C0.137308 4.27028 0.356347 3.56085 0.539424 3.08681C0.783309 2.46043 1.07427 2.01385 1.54308 1.54308C2.01254 1.07362 2.45912 0.782001 3.08616 0.539424C3.55889 0.355039 4.26962 0.137308 5.57797 0.0778078C6.9929 0.0130769 7.4179 0 10.9997 0C14.5828 0 15.0065 0.0143846 16.422 0.0778078C17.7304 0.137308 18.4398 0.356347 18.9138 0.539424C19.5402 0.782001 19.9868 1.07362 20.4569 1.54308C20.927 2.01254 21.2167 2.45977 21.4606 3.08616C21.645 3.55889 21.8627 4.26962 21.9222 5.57797C21.9869 6.99355 22 7.41724 22 11.0003C22 14.5821 21.9869 15.0071 21.9222 16.4227C21.8627 17.731 21.6437 18.4418 21.4606 18.9145C21.2167 19.5409 20.9264 19.9875 20.4569 20.4569C19.9875 20.9264 19.5402 21.2167 18.9138 21.4606C18.4411 21.645 17.7304 21.8627 16.422 21.9222C15.0078 21.9869 14.5828 22 10.9997 22C7.4179 22 6.9929 21.9876 5.57863 21.9222" fill="url(#paint0_radial)"/>
                     <path d="M5.57863 21.9222C4.27028 21.8627 3.55954 21.645 3.08681 21.4606C2.46043 21.2167 2.01385 20.9264 1.54373 20.4569C1.07362 19.9875 0.782655 19.5409 0.540078 18.9145C0.355693 18.4418 0.137962 17.731 0.0784617 16.4227C0.0130769 15.0084 0 14.5841 0 11.001C0 7.4179 0.0143846 6.9942 0.0778078 5.57863C0.137308 4.27028 0.356347 3.56085 0.539424 3.08681C0.783309 2.46043 1.07427 2.01385 1.54308 1.54308C2.01254 1.07362 2.45912 0.782001 3.08616 0.539424C3.55889 0.355039 4.26962 0.137308 5.57797 0.0778078C6.9929 0.0130769 7.4179 0 10.9997 0C14.5828 0 15.0064 0.0143846 16.422 0.0778078C17.7304 0.137308 18.4398 0.356347 18.9138 0.539424C19.5402 0.782001 19.9868 1.07362 20.4569 1.54308C20.927 2.01254 21.2167 2.45977 21.4606 3.08616C21.645 3.55889 21.8627 4.26962 21.9222 5.57797C21.9869 6.99355 22 7.41724 22 11.0003C22 14.5821 21.9869 15.0071 21.9222 16.4227C21.8627 17.731 21.6437 18.4418 21.4606 18.9145C21.2167 19.5409 20.9264 19.9875 20.4569 20.4569C19.9875 20.9264 19.5402 21.2167 18.9138 21.4606C18.4411 21.645 17.7304 21.8627 16.422 21.9222C15.0078 21.9869 14.5828 22 10.9997 22C7.4179 22 6.9929 21.9876 5.57863 21.9222" fill="url(#paint1_radial)"/>
@@ -97,23 +187,22 @@
                     <stop offset="1" stop-color="#8C3AAA"/>
                     </radialGradient>
                     </defs>
-                    </svg>
+                </svg>
             </a>
 
-            <a href="">
+            <a href="https://www.linkedin.com/company/grupo-hcode">
                 <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M0 1.57592C0 0.706062 0.728234 0 1.62594 0H20.3741C21.2721 0 22 0.706062 22 1.57592V20.4243C22 21.2945 21.2721 22 20.3741 22H1.62594C0.72832 22 0 21.2945 0 20.4246V1.57566V1.57592Z" fill="#006699"/>
                     <path d="M6.6856 18.411V8.50657H3.39351V18.411H6.68595H6.6856ZM5.04024 7.15452C6.18803 7.15452 6.9026 6.39397 6.9026 5.4435C6.88111 4.47138 6.18803 3.73206 5.06207 3.73206C3.93535 3.73206 3.19946 4.47138 3.19946 5.44341C3.19946 6.39388 3.91378 7.15443 5.01867 7.15443H5.03999L5.04024 7.15452ZM8.50782 18.411H11.7997V12.8805C11.7997 12.5849 11.8211 12.2885 11.9081 12.0774C12.146 11.4857 12.6877 10.8732 13.5973 10.8732C14.7882 10.8732 15.2649 11.7814 15.2649 13.113V18.411H18.5567V12.7321C18.5567 9.69002 16.9328 8.27437 14.7669 8.27437C12.9912 8.27437 12.2113 9.26686 11.778 9.94284H11.7999V8.50691H8.50799C8.55096 9.43607 8.50774 18.4114 8.50774 18.4114L8.50782 18.411Z" fill="white"/>
-                    </svg>
+                </svg>
             </a>
 
-            <a href="">
+            <a href="https://www.youtube.com/hcodebrasil">
                 <svg width="22" height="16" viewBox="0 0 22 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M14.6485 7.51009C12.6311 6.4319 10.6996 5.44067 8.7251 4.40576V10.5969C10.8028 9.46724 12.9928 8.43273 14.657 7.51009H14.6485V7.51009Z" fill="white"/>
                     <path d="M14.657 7.51597C12.6368 6.43574 8.7251 4.40576 8.7251 4.40576L13.9404 7.91313C13.9408 7.91313 12.9904 8.44036 14.657 7.51597Z" fill="#E8E0E0"/>
                     <path d="M9.1114 15.4442C4.9216 15.367 3.49057 15.2975 2.61098 15.1162C2.01588 14.9957 1.49873 14.7281 1.11955 14.34C0.826487 14.0463 0.593426 13.5982 0.412609 12.9765C0.257507 12.4585 0.197098 12.0276 0.110976 10.9749C-0.0208615 8.59912 -0.0522901 6.65675 0.110976 4.48645C0.24567 3.28794 0.310976 1.86517 1.20567 1.03511C1.62812 0.64664 2.11955 0.396644 2.67139 0.293296C3.53343 0.129491 7.20609 0 11.0081 0C14.8016 0 18.4824 0.129491 19.3453 0.293296C20.0347 0.422787 20.6812 0.810852 21.0608 1.31125C21.8771 2.59636 21.8914 4.19437 21.9743 5.44435C22.0086 6.03993 22.0086 9.42182 21.9743 10.0174C21.8453 11.9929 21.7416 12.6918 21.4486 13.4164C21.2673 13.874 21.1127 14.1154 20.8449 14.3829C20.425 14.7947 19.8896 15.0685 19.3102 15.1681C15.6845 15.4409 12.6057 15.5002 9.1114 15.4442ZM14.6637 7.50641C12.6465 6.42759 10.7151 5.4272 8.74079 4.39168V10.5868C10.8183 9.45654 13.0086 8.42102 14.6722 7.49783L14.6637 7.50641Z" fill="#CD201F"/>
-                    </svg>
-
+                </svg>
             </a>
          </div>
          <div class="link">
