--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="assets/js/slick-slider/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="assets/js/slick-slider/slick/slick-theme.css"/>
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Conecte-se RJ02</title>
 </head>
@@ -74,79 +76,29 @@
                     <li><a href="#">Restaurantes</a></li>
                 </ul>
             </nav>
-            <div class="carousel-gallery">
-                <!-- <div class="card">
-                    <div class="gallery-picture">
-                        <img src="assets/images/gallery/bondinho_pao_acucar.jpg" alt="Bondinho Pão de Açúcar" />
-                        <div class="gallery-ellipse">
-                            <svg width="24" height="24" viewBox="0 0 29 27" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M14.5 27L12.3975 25.0578C4.93 18.1864 0 13.6545 0 8.09264C0 3.56076 3.509 0 7.975 0C10.498 0 12.9195 1.19183 14.5 3.0752C16.0805 1.19183 18.502 0 21.025 0C25.491 0 29 3.56076 29 8.09264C29 13.6545 24.07 18.1864 16.6025 25.0725L14.5 27Z" fill="#333333A0"/>
-                            </svg>
-                        </div>
-                    </div>
-                    <h2>Bondinho Pão de Açúcar</h2>
-                    <div class="card-location">
-                        <svg width="24" height="24" viewBox="0 0 14 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M7 0C3.13 0 0 3.13 0 7C0 12.25 7 20 7 20C7 20 14 12.25 14 7C14 3.13 10.87 0 7 0ZM7 9.5C5.62 9.5 4.5 8.38 4.5 7C4.5 5.62 5.62 4.5 7 4.5C8.38 4.5 9.5 5.62 9.5 7C9.5 8.38 8.38 9.5 7 9.5Z" fill="#C7C7C8"/>
-                        </svg>
-                        <h3>Rio de Janeiro - RJ</h3>
-                    </div>
-                </div> -->
-                <!-- 
+            <div class="carousel-gallery" id="locations-slider">
+                
+            </div>
+        </div>
+    </section>
 
-                <div class="card">
-                    <div class="gallery-picture">
-                        <img src="assets/images/gallery/museu_do_amanha.jpg" alt="Bondinho Pão de Açúcar" />
-                        <div class="gallery-ellipse">
-                            <svg width="24" height="24" viewBox="0 0 29 27" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M14.5 27L12.3975 25.0578C4.93 18.1864 0 13.6545 0 8.09264C0 3.56076 3.509 0 7.975 0C10.498 0 12.9195 1.19183 14.5 3.0752C16.0805 1.19183 18.502 0 21.025 0C25.491 0 29 3.56076 29 8.09264C29 13.6545 24.07 18.1864 16.6025 25.0725L14.5 27Z" fill="#333333A0"/>
-                            </svg>
-                        </div>
-                    </div>
-                    <h2>Museu do Amanhã</h2>
-                    <div class="card-location">
-                        <svg width="24" height="24" viewBox="0 0 14 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M7 0C3.13 0 0 3.13 0 7C0 12.25 7 20 7 20C7 20 14 12.25 14 7C14 3.13 10.87 0 7 0ZM7 9.5C5.62 9.5 4.5 8.38 4.5 7C4.5 5.62 5.62 4.5 7 4.5C8.38 4.5 9.5 5.62 9.5 7C9.5 8.38 8.38 9.5 7 9.5Z" fill="#C7C7C8"/>
-                        </svg>
-                        <h3>Rio de Janeiro - RJ</h3>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="gallery-picture">
-                        <img src="assets/images/gallery/praia_copacabana.jpg" alt="Bondinho Pão de Açúcar" />
-                        <div class="gallery-ellipse">
-                            <svg width="24" height="24" viewBox="0 0 29 27" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M14.5 27L12.3975 25.0578C4.93 18.1864 0 13.6545 0 8.09264C0 3.56076 3.509 0 7.975 0C10.498 0 12.9195 1.19183 14.5 3.0752C16.0805 1.19183 18.502 0 21.025 0C25.491 0 29 3.56076 29 8.09264C29 13.6545 24.07 18.1864 16.6025 25.0725L14.5 27Z" fill="#333333A0"/>
-                            </svg>
-                        </div>
-                    </div>
-                    <h2>Praia de Copacabana</h2>
-                    <div class="card-location">
-                        <svg width="24" height="24" viewBox="0 0 14 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M7 0C3.13 0 0 3.13 0 7C0 12.25 7 20 7 20C7 20 14 12.25 14 7C14 3.13 10.87 0 7 0ZM7 9.5C5.62 9.5 4.5 8.38 4.5 7C4.5 5.62 5.62 4.5 7 4.5C8.38 4.5 9.5 5.62 9.5 7C9.5 8.38 8.38 9.5 7 9.5Z" fill="#C7C7C8"/>
-                        </svg>
-                        <h3>Rio de Janeiro - RJ</h3>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="gallery-picture">
-                        <img src="assets/images/gallery/corcovado.jpg" alt="Bondinho Pão de Açúcar" />
-                        <div class="gallery-ellipse">
-                            <svg width="24" height="24" viewBox="0 0 29 27" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M14.5 27L12.3975 25.0578C4.93 18.1864 0 13.6545 0 8.09264C0 3.56076 3.509 0 7.975 0C10.498 0 12.9195 1.19183 14.5 3.0752C16.0805 1.19183 18.502 0 21.025 0C25.491 0 29 3.56076 29 8.09264C29 13.6545 24.07 18.1864 16.6025 25.0725L14.5 27Z" fill="#333333A0"/>
-                            </svg>
-                        </div>
-                    </div>
-                    <h2>Corcovado</h2>
-                    <div class="card-location">
-                        <svg width="24" height="24" viewBox="0 0 14 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M7 0C3.13 0 0 3.13 0 7C0 12.25 7 20 7 20C7 20 14 12.25 14 7C14 3.13 10.87 0 7 0ZM7 9.5C5.62 9.5 4.5 8.38 4.5 7C4.5 5.62 5.62 4.5 7 4.5C8.38 4.5 9.5 5.62 9.5 7C9.5 8.38 8.38 9.5 7 9.5Z" fill="#C7C7C8"/>
-                        </svg>
-                        <h3>Rio de Janeiro - RJ</h3>
-                    </div>
-                </div> -->
+    <section class="block slider">
+        <div class="title-slider">
+            <h2 id="locations">Teatros</h2>
+        </div>
+        <div class="carousel-container">
+            <nav class="link-slider">
+                <ul>
+                    <li><a href="#">Todos</a></li>
+                    <li><a href="#">Museus</a></li>
+                    <li><a href="#">Galerias</a></li>
+                    <li><a href="#">Pontos Turísticos</a></li>
+                    <li><a href="#">Esportes</a></li>
+                    <li><a href="#">Restaurantes</a></li>
+                </ul>
+            </nav>
+            <div class="carousel-gallery" id="theaters-slider">
+                
             </div>
         </div>
     </section>
@@ -218,6 +170,9 @@
 
     </footer>
 
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="assets/js/slick-slider/slick/slick.min.js"></script>
     <script src="assets/js/main.js"></script>
 
 </body>
