Finishing the Slider

--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
         <div class="carousel-container">
             <nav class="link-slider">
                 <ul>
-                    <li><a href="#">Todos</a></li>
-                    <li><a href="#">Museus</a></li>
-                    <li><a href="#">Galerias</a></li>
-                    <li><a href="#">Pontos Turísticos</a></li>
-                    <li><a href="#">Esportes</a></li>
-                    <li><a href="#">Restaurantes</a></li>
+                    <li><a href="#" data-category="0">Todos</a></li>
+                    <li><a href="#" data-category="1">Museus</a></li>
+                    <li><a href="#" data-category="2">Galerias</a></li>
+                    <li><a href="#" data-category="3">Pontos Turísticos</a></li>
+                    <li><a href="#" data-category="4">Esportes</a></li>
+                    <li><a href="#" data-category="5">Restaurantes</a></li>
                 </ul>
             </nav>
             <div class="carousel-gallery" id="locations-slider">
