--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Hcode Treinamentos é uma empresa com foco no ensino online de TI de uma maneira objetiva e divertida." />
+    <title>Conecte-se RJ02</title>
+    <link rel="shortcut icon" href="assets/images/favicon.svg" type="image/svg" />
     <link rel="stylesheet" type="text/css" href="assets/js/slick-slider/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="assets/js/slick-slider/slick/slick-theme.css"/>
     <link rel="stylesheet" href="assets/css/style.css" />
-    <title>Conecte-se RJ02</title>
 </head>
 <body>
     
@@ -27,9 +29,9 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="quem-somos.html">Quem Somos</a></li>
-                <li><a href="museus.html">Museus</a></li>
-                <li><a href="galerias.html">Galerias</a></li>
-                <li><a href="turismo.html">Turismo</a></li>
+                <li><a href="#locations">Museus</a></li>
+                <li><a href="#locations">Galerias</a></li>
+                <li><a href="#locations">Turismo</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
@@ -58,6 +60,15 @@
                 </svg>
             </div>
         </div>
+
+        <a href="#locations" title="Mouse" class="icon-mouse">
+            <svg viewBox="0 0 64 136" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path id="arrow1" d="M33.2438 111.691L47.1178 97.803C47.3481 97.5341 47.4684 97.1882 47.4547 96.8344C47.4411 96.4806 47.2944 96.1451 47.0441 95.8947C46.7937 95.6444 46.4581 95.4977 46.1044 95.4841C45.7506 95.4704 45.4047 95.5907 45.1358 95.821L32.4004 108.556L20.0305 96.1865C19.7671 95.9247 19.4108 95.7777 19.0395 95.7777C18.6681 95.7777 18.3118 95.9247 18.0485 96.1865C17.9167 96.3172 17.8121 96.4726 17.7408 96.6439C17.6694 96.8152 17.6327 96.9989 17.6327 97.1845C17.6327 97.3701 17.6694 97.5538 17.7408 97.7251C17.8121 97.8964 17.9167 98.0519 18.0485 98.1825L31.557 111.691C31.7809 111.914 32.0842 112.04 32.4004 112.04C32.7166 112.04 33.0198 111.914 33.2438 111.691Z" fill="white"/>
+                <path id="arrow2" d="M33.2438 125.157L47.1178 111.269C47.3481 111 47.4684 110.655 47.4547 110.301C47.4411 109.947 47.2944 109.611 47.0441 109.361C46.7937 109.111 46.4581 108.964 46.1044 108.95C45.7506 108.937 45.4047 109.057 45.1358 109.287L32.4004 122.023L20.0305 109.653C19.7671 109.391 19.4108 109.244 19.0395 109.244C18.6681 109.244 18.3118 109.391 18.0485 109.653V109.653C17.7866 109.916 17.6397 110.272 17.6397 110.644C17.6397 111.015 17.7866 111.371 18.0485 111.635L31.557 125.157C31.7809 125.381 32.0842 125.506 32.4004 125.506C32.7166 125.506 33.0198 125.381 33.2438 125.157V125.157Z" fill="white"/>
+                <path id="ball" d="M35.5294 27.1763C35.5294 25.227 33.9493 23.6469 32 23.6469C30.0507 23.6469 28.4706 25.227 28.4706 27.1763V37.7645C28.4706 39.7138 30.0507 41.2939 32 41.2939C33.9493 41.2939 35.5294 39.7138 35.5294 37.7645V27.1763Z" fill="white"/>
+                <path id="mouse" fill-rule="evenodd" clip-rule="evenodd" d="M2 30.7059C2 17.0612 13.0612 6 26.7059 6H37.2941C50.9388 6 62 17.0612 62 30.7059V58.9412C62 72.5859 50.9388 83.647 37.2941 83.647H26.7059C13.0612 83.647 2 72.5859 2 58.9412V30.7059ZM26.7059 13.0588H37.2941C47.0402 13.0588 54.9412 20.9597 54.9412 30.7059V58.9412C54.9412 68.6873 47.0402 76.5882 37.2941 76.5882H26.7059C16.9597 76.5882 9.05882 68.6873 9.05882 58.9412V30.7059C9.05882 20.9597 16.9597 13.0588 26.7059 13.0588Z" fill="white"/>
+            </svg>
+        </a>        
 
     </section>
 
@@ -104,27 +115,35 @@
     </section>
 
     <footer class="footer-site">
-     <div class="footer-links">
-         <nav class="link">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="quem-somos.html">Quem somos</a></li>
-                <li><a href="museus.html">Museus</a></li>
-                <li><a href="galeria.html">Galeria</a></li>
-                <li><a href="turismo.html">Turismo</a></li>
-                <li><a href="contato.html">Contato</a></li>
-            </ul>
-         </nav>
-         <div class="link">
-            <p class="link-address">
-                R. José Versolato, 101 <br />
-                12º andar - Centro, <br />
-                São Bernardo do Campo <br />
-                SP - 09750-730
-            </p>
-         </div>
-         <div class="link social-media">
-            <a href="https://www.instagram.com/hcodebrasil/">
+        <div id="gototop">
+            <a href="#" title="Ir para o topo">
+                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#f4f4f4">
+                    <path d="M0 0h24v24H0V0z" fill="none" />
+                    <path d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z" />
+                </svg>
+            </a>
+        </div>
+        <div class="footer-links">
+            <nav class="link">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="quem-somos.html">Quem somos</a></li>
+                    <li><a href="museus.html">Museus</a></li>
+                    <li><a href="galeria.html">Galeria</a></li>
+                    <li><a href="turismo.html">Turismo</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </nav>
+            <div class="link">
+                <p class="link-address">
+                    R. José Versolato, 101 <br />
+                    12º andar - Centro, <br />
+                    São Bernardo do Campo <br />
+                    SP - 09750-730
+                </p>
+            </div>
+            <div class="link social-media">
+            <a href="https://www.instagram.com/hcodebrasil/" title="Instagram">
                 <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M5.57863 21.9222C4.27028 21.8627 3.55954 21.645 3.08681 21.4606C2.46043 21.2167 2.01385 20.9264 1.54373 20.4569C1.07362 19.9875 0.782655 19.5409 0.540078 18.9145C0.355693 18.4418 0.137962 17.731 0.0784617 16.4227C0.0130769 15.0084 0 14.5841 0 11.001C0 7.4179 0.0143846 6.9942 0.0778078 5.57863C0.137308 4.27028 0.356347 3.56085 0.539424 3.08681C0.783309 2.46043 1.07427 2.01385 1.54308 1.54308C2.01254 1.07362 2.45912 0.782001 3.08616 0.539424C3.55889 0.355039 4.26962 0.137308 5.57797 0.0778078C6.9929 0.0130769 7.4179 0 10.9997 0C14.5828 0 15.0065 0.0143846 16.422 0.0778078C17.7304 0.137308 18.4398 0.356347 18.9138 0.539424C19.5402 0.782001 19.9868 1.07362 20.4569 1.54308C20.927 2.01254 21.2167 2.45977 21.4606 3.08616C21.645 3.55889 21.8627 4.26962 21.9222 5.57797C21.9869 6.99355 22 7.41724 22 11.0003C22 14.5821 21.9869 15.0071 21.9222 16.4227C21.8627 17.731 21.6437 18.4418 21.4606 18.9145C21.2167 19.5409 20.9264 19.9875 20.4569 20.4569C19.9875 20.9264 19.5402 21.2167 18.9138 21.4606C18.4411 21.645 17.7304 21.8627 16.422 21.9222C15.0078 21.9869 14.5828 22 10.9997 22C7.4179 22 6.9929 21.9876 5.57863 21.9222" fill="url(#paint0_radial)"/>
                     <path d="M5.57863 21.9222C4.27028 21.8627 3.55954 21.645 3.08681 21.4606C2.46043 21.2167 2.01385 20.9264 1.54373 20.4569C1.07362 19.9875 0.782655 19.5409 0.540078 18.9145C0.355693 18.4418 0.137962 17.731 0.0784617 16.4227C0.0130769 15.0084 0 14.5841 0 11.001C0 7.4179 0.0143846 6.9942 0.0778078 5.57863C0.137308 4.27028 0.356347 3.56085 0.539424 3.08681C0.783309 2.46043 1.07427 2.01385 1.54308 1.54308C2.01254 1.07362 2.45912 0.782001 3.08616 0.539424C3.55889 0.355039 4.26962 0.137308 5.57797 0.0778078C6.9929 0.0130769 7.4179 0 10.9997 0C14.5828 0 15.0064 0.0143846 16.422 0.0778078C17.7304 0.137308 18.4398 0.356347 18.9138 0.539424C19.5402 0.782001 19.9868 1.07362 20.4569 1.54308C20.927 2.01254 21.2167 2.45977 21.4606 3.08616C21.645 3.55889 21.8627 4.26962 21.9222 5.57797C21.9869 6.99355 22 7.41724 22 11.0003C22 14.5821 21.9869 15.0071 21.9222 16.4227C21.8627 17.731 21.6437 18.4418 21.4606 18.9145C21.2167 19.5409 20.9264 19.9875 20.4569 20.4569C19.9875 20.9264 19.5402 21.2167 18.9138 21.4606C18.4411 21.645 17.7304 21.8627 16.422 21.9222C15.0078 21.9869 14.5828 22 10.9997 22C7.4179 22 6.9929 21.9876 5.57863 21.9222" fill="url(#paint1_radial)"/>
@@ -142,24 +161,24 @@
                 </svg>
             </a>
 
-            <a href="https://www.linkedin.com/company/grupo-hcode">
+            <a href="https://www.linkedin.com/company/grupo-hcode" title="LinkedIn">
                 <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M0 1.57592C0 0.706062 0.728234 0 1.62594 0H20.3741C21.2721 0 22 0.706062 22 1.57592V20.4243C22 21.2945 21.2721 22 20.3741 22H1.62594C0.72832 22 0 21.2945 0 20.4246V1.57566V1.57592Z" fill="#006699"/>
                     <path d="M6.6856 18.411V8.50657H3.39351V18.411H6.68595H6.6856ZM5.04024 7.15452C6.18803 7.15452 6.9026 6.39397 6.9026 5.4435C6.88111 4.47138 6.18803 3.73206 5.06207 3.73206C3.93535 3.73206 3.19946 4.47138 3.19946 5.44341C3.19946 6.39388 3.91378 7.15443 5.01867 7.15443H5.03999L5.04024 7.15452ZM8.50782 18.411H11.7997V12.8805C11.7997 12.5849 11.8211 12.2885 11.9081 12.0774C12.146 11.4857 12.6877 10.8732 13.5973 10.8732C14.7882 10.8732 15.2649 11.7814 15.2649 13.113V18.411H18.5567V12.7321C18.5567 9.69002 16.9328 8.27437 14.7669 8.27437C12.9912 8.27437 12.2113 9.26686 11.778 9.94284H11.7999V8.50691H8.50799C8.55096 9.43607 8.50774 18.4114 8.50774 18.4114L8.50782 18.411Z" fill="white"/>
                 </svg>
             </a>
 
-            <a href="https://www.youtube.com/hcodebrasil">
+            <a href="https://www.youtube.com/hcodebrasil" title="YouTube">
                 <svg width="22" height="16" viewBox="0 0 22 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M14.6485 7.51009C12.6311 6.4319 10.6996 5.44067 8.7251 4.40576V10.5969C10.8028 9.46724 12.9928 8.43273 14.657 7.51009H14.6485V7.51009Z" fill="white"/>
                     <path d="M14.657 7.51597C12.6368 6.43574 8.7251 4.40576 8.7251 4.40576L13.9404 7.91313C13.9408 7.91313 12.9904 8.44036 14.657 7.51597Z" fill="#E8E0E0"/>
                     <path d="M9.1114 15.4442C4.9216 15.367 3.49057 15.2975 2.61098 15.1162C2.01588 14.9957 1.49873 14.7281 1.11955 14.34C0.826487 14.0463 0.593426 13.5982 0.412609 12.9765C0.257507 12.4585 0.197098 12.0276 0.110976 10.9749C-0.0208615 8.59912 -0.0522901 6.65675 0.110976 4.48645C0.24567 3.28794 0.310976 1.86517 1.20567 1.03511C1.62812 0.64664 2.11955 0.396644 2.67139 0.293296C3.53343 0.129491 7.20609 0 11.0081 0C14.8016 0 18.4824 0.129491 19.3453 0.293296C20.0347 0.422787 20.6812 0.810852 21.0608 1.31125C21.8771 2.59636 21.8914 4.19437 21.9743 5.44435C22.0086 6.03993 22.0086 9.42182 21.9743 10.0174C21.8453 11.9929 21.7416 12.6918 21.4486 13.4164C21.2673 13.874 21.1127 14.1154 20.8449 14.3829C20.425 14.7947 19.8896 15.0685 19.3102 15.1681C15.6845 15.4409 12.6057 15.5002 9.1114 15.4442ZM14.6637 7.50641C12.6465 6.42759 10.7151 5.4272 8.74079 4.39168V10.5868C10.8183 9.45654 13.0086 8.42102 14.6722 7.49783L14.6637 7.50641Z" fill="#CD201F"/>
                 </svg>
             </a>
-         </div>
-         <div class="link">
+        </div>
+        <div class="link">
             <img src="assets/images/logo-desktop.svg" alt="logotipo">
-         </div>
+        </div>
 
      </div>
      <div class="copyright">
